--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 </head>
 <link rel="stylesheet" type="text/css" href="css/main.css">
+<link rel="stylesheet" type="text/css" href="css/weather.css">
 <body>
 
 <span class="clock"></span>
